--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_CHECK_XSI_SHELL): Fix bogus merge.
+	Reported by Patrick Welche <prlw1@newn.cam.ac.uk>.
+
 2005-07-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/Makefile.am (libltdl_la_DEPENDENCIES): Depend on
