--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-23 Peter O'Gorman  <peter@pogma.com>
+
+	* m4/libtool.m4 (CXX, archive_cmds) [sun]: Add -lCstd, -lCrun
+	and -lc for c++ builds with Sun C++ and Centerline C++..
+	Reported by Albert Chin-A-Young <china@hewrittenword.com>
+
 2005-07-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/Makefile.am (libltdl_la_DEPENDENCIES): Depend on
