--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-07-28  Peter Ekberg  <peda@lysator.liu.se>
 
+	* config/ltmain.m4sh (func_mode_link) <lib>: Make sure
+	skipped_export is set to colon if _some_ cmd of
+	export_symbols_cmds is too long.
+
+2005-07-28  Peter Ekberg  <peda@lysator.liu.se>
+
 	* libltdl/ltdl.c: The linker is confused by having one
 	definition of lt_libltdlc_LTX_preloaded_symbols tagged with
 	__declspec(dllexport) in ltdl.c and one definition with an
