--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-02  Peter Ekberg  <peda@lysator.liu.se>
+
+	* ltmain.in (link mode) <lib>: Make sure skipped_export is
+	set to colon if _some_ cmd of export_symbols_cmds is too long.
+
 2005-07-24  Peter O'Gorman  <peter@pogma.com>
 
 	* libtool.m4 (CXX, archive_cmds) [sun]: Add -lCstd, -lCrun
