--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-08-03  Peter Ekberg  <peda@lysator.liu.se>
 
+	* libltdl/ltdl.c (sys_wll_open): Set the error mode so that no
+	dialog is popped up in case the file given to LoadLibrary is not
+	a dll.
+
 	* ltmain.in (link mode): Properly remove the fake symbol line
 	": @PROGRAM " from the list of exported symbols.
 
