--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-04  Christoph Egger  <Christoph_Egger@gmx.de>
+
+	* config/ltmain.m4sh (func_mode_link) <cwrappersource>: Change
+	basename() to base_name() and have it return a pointer to const,
+	fix compilation warnings.
+
 2005-07-30  Peter Ekberg  <peda@lysator.liu.se>
 
 	* m4/libtool.m4 (_LT_PROG_F77): Set it up so that saying F77=no
