--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-05  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* ltmain.in (link mode): Ignore errors from expr when
+	determining if piece-wise linking should be done.
+
 2005-08-03  Peter Ekberg  <peda@lysator.liu.se>
 
 	* libltdl/ltdl.c (sys_wll_open): Set the error mode so that no
