--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-08  Peter O'Gorman  <peter@pogma.com>
+
+	* config/ltmain.m4sh (inherited_linker_flags): Work when output
+	is an application too.
+	Reported by Christopher Egger <Christoph_Egger@gmx.de>
+
 2005-08-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/libtool.m4 (_LT_PROG_FC, _LT_LANG_FC_CONFIG): New macros
