--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* config/ltmain.m4sh (inherited_linker_flags): Backed out broken
+	patch.
+
 2005-08-08  Peter O'Gorman  <peter@pogma.com>
 
 	* config/ltmain.m4sh (inherited_linker_flags): Work when output
