--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* config/ltmain.m4sh (mode): Do not initialize, for nicer error
+	messages.
+
 2005-08-10  Peter Ekberg  <peda@lysator.liu.se>
 
 	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG): Set ac_ext to cpp, not cc.
