--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/convenience.at, tests/template.at: Change suffix of C++
+	files to .cpp, for compatibility with MSVC.
+	Reported by Peter Ekberg <peda@axentia.se>.
+
 2005-08-12  Jeremie LE HEN <tataz@sitadelle.com>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
