--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-18  Stepan Kasal  <kasal@ucw.cz>
+
+	* config/general.m4sh (SP2NL, NL2SP): Simplify.
+
 2005-08-17  Gary V. Vaughan  <gary@gnu.org>
 
 	* m4/ltdl.m4 (LTDL_INIT): Fix mismatched parens.
