--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-08-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ freebsd ]: Do not
+	assume `aout' for modern FreeBSD by absence of deprecated
+	`objformat'.
+
 	* m4/libtool.m4 [sun, CC] (_LT_LANG_CXX_CONFIG): Move postdeps
 	override ..
 	(_LT_SYS_HIDDEN_LIBDEPS): ..here.
