--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2005-08-22  Peter Ekberg  <peda@lysator.liu.se>
+
+	* m4/libtool.m4: Bump serial number.
+	(LT_PATH_NM): If nm is not found on the path, look for
+	dumpbin. Then check if $NM responds as dumpbin would
+	and if not, assume the name lister is BSD nm compatible.
+	(_LT_CMD_GLOBAL_SYMBOLS): If the name lister uses the
+	dumpbin interface, adjust the test to find a working
+	global_symbol_pipe.
+	* doc/libtool.texi: Document $NM to possibly be MS
+	dumpbin compatible, and also document the format of the
+	relevant output from MS dumpbin.
+
 2005-08-21  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/Makefile.am: revert mistaken commit.
